--- a/style.css
+++ b/style.css
@@ -1,129 +1,140 @@
-.outer {
-    background-color: #808080;
-    padding: 0 0 0.2% 0;
-}
-
-div {
-    /*border: 1px solid black;*/
-}
-
-.main {
-    background-color: white;
-    margin: 0.1% 0.1% 0.5% 0.1%;
-    padding: 0 0 2% 0;
-}
-
-.icon {
-    width: 20px; 
-    height: 20px;
-    vertical-align: middle;
-    cursor: pointer;
-}
-.menu{
-    font-size: 1.5vw;
-    overflow: hidden;
-    background-color: #d3d3d3;
-}
-.menu-items{
-    float: right;
-    overflow: hidden;
-    width: 60%;
-    height: 99%;
-}
-.menu-item{
-    float: right;
-    margin: 0.3%;
-    padding: 0.5% 3% 0.5% 0.5%;
-    height: 99%;
-    cursor: pointer;
-}
-.title{
-    float: left;
-    padding: 0.5%;
-    width: 30%;
-    height: 99%;
-}
-.menu-item.active{
-    background-color: #808080;
-    color: yellow;
-}
-
-.typesearch {
-    width: 60%;
-    vertical-align: middle;
-    margin: 2px 3px;
-}
-
-.images {
-    width: 90%;
-    height: 20%;
-    overflow: hidden;
-    margin: 0.2% auto;
-    text-align: right;
-}
-
-.screenshot {
-    height: 100%;
-    width: 24%;
-    float: left;
-    margin: 0.1%;
-}
-
-.middle {
-    width: 49%;
-}
-
-.bottom {
-    overflow: hidden;
-}
-
-.copyright {
-    font-size: 1vw;
-    float: left;
-    width: 49%;
-    text-align: left;
-}
-
-.rightalign {
-    text-align: right;
-}
-
-.infoblock {
-    display: inline-block;
-    width: 23%;
-    float: left;
-    padding: 1%;
+body, div{
+    /*border: black 1px solid;*/
     font-size: 1vw;
 }
 
-.ShortInfo {
-    width: 50%;
-    margin: 0.1% auto;
-    overflow: hidden;
+body{
+    display: flex;
+    flex-direction: column;
+    font-family: Arial, serif;
+    border: thin solid black;
 }
 
-.infoblock img {
-    margin: 0 auto;
-    display: block;
+.header{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 15%;
+    border-bottom: thin solid black;
+    background-image: url("images/view.png");
 }
 
-.article {
-    font-size: 1vw;
-    width: 70%;
-    text-align: justify;
-    margin: 0 auto;
-    overflow: hidden;
+.header-menu{
+    display: flex;
+    flex-basis: 25%;
+    flex-direction: row;
+    justify-content: end;
 }
 
-.article p {
-    text-indent: 1%;
+.header-menu-item{
+    width: 12.5%;
+    padding: 0.75%;
 }
 
-.article h3 {
+.header-menu-item-active{
+    color: red;
+}
+
+.header-name{
     text-align: center;
+    height: 5vw;
+    vertical-align: bottom;
 }
 
-.article img {
+.header-name p{
+    padding-top: 3vh;
+}
+
+.main{
+    display: grid;
+    height: 70vh;
+    grid-template-rows: repeat(3, 30%);
+    grid-template-columns: repeat(2, 40%);
+    justify-content: center;
+    align-content: center;
+    gap: 1vw;
+}
+
+.main-item{
+    display: flex;
+    flex-wrap: wrap;
+    border: solid grey 2px;
+    padding: 0.2vw;
+}
+
+.main-item-image{
+    width: 49%;
+}
+
+.main-item-title{
+    display: flex;
+    width: 49%;
+    align-items: center;
+}
+
+.main-item-article{
+    display: flex;
+    width: 100%;
+}
+
+.main-item-image img {
+    height: 100px;
+}
+
+.footer{
+    display: flex;
+    flex-direction: row;
+    height: 3vw;
+    overflow: hidden;
+    justify-content: space-between;
+    border-top: thin solid black;
+}
+
+.footer-copyright{
+    text-align: left;
+    vertical-align: middle;
+    width: fit-content;
     float: left;
-    width: 20%;
+    overflow: hidden;
+    padding-left: 0.6vw;
+}
+
+.footer-contact{
+    width: fit-content;
+    text-align: right;
+    float: left;
+    padding-right: 0.6vw;
+    overflow: hidden;
+    vertical-align: middle;
+}
+
+.footer-copyright p{
+    margin-bottom: 10px;
+}
+
+.footer-contact p{
+    margin-bottom: 10px;
+}
+
+.icon{
+    width: 10px;
+}
+
+@media(max-width: 1000px){
+
+    .main{
+        display: block;
+    }
+
+    .main-item{
+        height: 10vh;
+        margin: 0.1vh;
+    }
+
+    .header-menu{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        justify-items: right;
+        column-gap: 0;
+    }
 }
